# contracts/dto/user.go
@@ -1,19 +1,32 @@
 package dto
 
 type User struct {
-	ID    int64  `json:"id"`
-	Login string `json:"login"`
-	Name  string `json:"name"`
+	ID         int64  `json:"id"`
+	LastName   string `json:"lastName"`
+	FirstName  string `json:"firstName"`
+	SecondName string `json:"secondName"`
+	Email      string `json:"email"`
+	Phone      string `json:"phone"`
+	LastAuthAt string `json:"lastAuthAt,omitempty"`
+	Active     bool   `json:"active"`
 }
 
-type Device struct {
-	ID          int64  `json:"id"`
-	Name        string `json:"name"`
-	Fingerprint string `json:"fingerprint"`
-	LastSeen    string `json:"lastSeen"`
+type CreateUser struct {
+	LastName   string `json:"lastName"`
+	FirstName  string `json:"firstName"`
+	SecondName string `json:"secondName"`
+	Email      string `json:"email"`
+	Phone      string `json:"phone"`
+	Password   string `json:"password"`
+	Active     *bool  `json:"active,omitempty"`
 }
 
-type UserDetails struct {
-	User    User     `json:"user"`
-	Devices []Device `json:"devices"`
+type UpdateUser struct {
+	LastName   string  `json:"lastName"`
+	FirstName  string  `json:"firstName"`
+	SecondName string  `json:"secondName"`
+	Email      string  `json:"email"`
+	Phone      string  `json:"phone"`
+	Password   *string `json:"password,omitempty"`
+	Active     bool    `json:"active"`
 }
