# internal/db/models.go
@@ -1,0 +1,18 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.31.1
+
+package db
+
+type User struct {
+	ID           int64   `json:"id"`
+	LastName     string  `json:"last_name"`
+	FirstName    string  `json:"first_name"`
+	SecondName   string  `json:"second_name"`
+	Email        string  `json:"email"`
+	Phone        string  `json:"phone"`
+	PasswordHash string  `json:"password_hash"`
+	LastAuthAt   *string `json:"last_auth_at"`
+	IsActive     bool    `json:"is_active"`
+	CreatedAt    string  `json:"created_at"`
+}
